--- a/www/css/review.css
+++ b/www/css/review.css
@@ -1,4 +1,4 @@
-#btn-movie, #btn-review{
+#btn-movie, #btn-action{
     position: fixed;
     right: 15px;
     bottom: 15px;
@@ -17,4 +17,31 @@
 #movieDetails{
     width: 100vw;
     border: none;
+    text-transform: none;
 }
+
+#movieDetails p{
+    font-size: small
+}
+
+#actionDetails{
+    height: 50vh;
+}
+
+#poster{
+    width: 7rem;
+    height: fit-content;
+}
+
+.star{
+    width: 35px;
+    color:rgb(230, 220, 16);
+}
+
+.watch-user{
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+    background-color: aliceblue;
+}
+
