--- a/www/css/main.css
+++ b/www/css/main.css
@@ -5,6 +5,17 @@
     box-sizing: border-box;
 }
 
+a {
+    color: #ffffff; 
+    text-decoration: none;
+    font-weight: normal; 
+    font-style: normal; 
+}
+
+a:hover {
+    color: gray; 
+}
+
 body {
     -webkit-touch-callout: none;
     -webkit-text-size-adjust: none;
@@ -29,14 +40,29 @@ button {
 }
 
 header {
-    background-color: #E9AC2F;
+    /* position: sticky;
+    top: 0; */
+    background-color: #000000;
     height: 100px;
     font-family: 'Base Neue Trial';
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    position: relative;
-    z-index: 1;
+    z-index: 1000;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+    transition: background-color 0.3s, backdrop-filter 0.3s;
 }
+
+header.blur {
+    backdrop-filter: blur(10px);
+    background-color: rgba(0, 0, 0, 0.481);
+}
+
+header.hidden {
+    background-color: transparent;
+}
+
+.toggle.hidden {
+    background-color: transparent;
+}
+
 
 .contenedor-header {
     display: grid;
@@ -49,6 +75,7 @@ header {
     display: flex;
     align-items: center; 
     justify-content: flex-start;
+    color: white;
 }
 
 .contenedor-header-item3 {
@@ -61,15 +88,12 @@ header {
     height: 30px;
 }
 
-
-
-
 .slide {
     z-index: 1;
-    height: 100%;
+    height: 500%;
     width: 180px;
     position: absolute;
-    background-color: #E9AC2F;
+    background-color: #000000;
     transition: 0.5s ease;
     transform: translateX(-180px);
 }
@@ -79,7 +103,7 @@ ul li {
 }
 
 ul li a {
-    color: #000000;
+    color: #ffffff;
     display: block;
 }
 
@@ -108,7 +132,7 @@ input {
     width: 30px;
     top: 35px;
     left: 30px;
-    background-color: #E9AC2F;
+    background-color: #000000;
     z-index: 3;
 }
 
@@ -116,7 +140,7 @@ input {
     position: absolute;
     height: 2px;
     width: 20px;
-    background-color: #000000;
+    background-color: #ffffff;
     transition: 0.3s ease;
 }
 
@@ -166,12 +190,15 @@ input:checked ~ .slide {
 }
 
 .contenedor-nav {
+    position: sticky;
+    top: 0;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
-    margin-top: -15px;
     height: 70px;
-    background-color: #a47923;
+    background-color: #101010;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);  
+
 }
 
 .contenedor-nav-item1, .contenedor-nav-item2, .contenedor-nav-item3 {
@@ -179,13 +206,19 @@ input:checked ~ .slide {
     display: flex;
     align-items: center;
     justify-content: center;
+    color: white;
 }
 
+/* Estilos para la sección de populares en cuadrícula */
 .muro {
     color: beige;
-    background-color: #0f0f0f;
-    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 16px;
+}
 
+.muro label, .recommendations label {
+    margin-bottom: 16px; 
+    display: block;
 }
 
 .carrousel-wrapper {
@@ -195,30 +228,25 @@ input:checked ~ .slide {
 }
 
 .carrousel-container {
-    overflow-x: auto; /* Permitir desplazamiento horizontal */
-    white-space: nowrap;
-    flex-grow: 1; /* Permitir que el contenedor crezca para ocupar el espacio disponible */
-    padding: 16px;
-    scroll-behavior: smooth; /* Desplazamiento suave */
-    z-index: 0;
-}
-
-.carrousel-incrementable {
-    display: inline-flex;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* Añadir espacio entre los elementos */
 }
 
 .carrousel-incrementable-item {
-    display: inline-block;
+    flex: 1 1 calc(33.333% - 16px); /* Tres elementos por fila */
+    box-sizing: border-box;
     position: relative;
-    width: 150px; /* Tamaño pequeño */
-    margin-right: 16px;
-    z-index: 0;
+    width: 150px; /* Ancho fijo de 150px */
+    margin-bottom: 10px;
 }
 
 .carrousel-incrementable-item img {
     width: 100%;
     height: auto;
     display: block;
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.501);
 }
 
 .carrousel-incrementable-item .title {
@@ -233,7 +261,7 @@ input:checked ~ .slide {
     text-align: center;
     overflow: hidden;
     text-overflow: ellipsis; 
-    white-space: nowrap; 
+    white-space: normal; /* Permitir que el texto abarque más de una línea */
 }
 
 .carrousel-incrementable-item .rating {
@@ -247,13 +275,200 @@ input:checked ~ .slide {
     text-align: center;
 }
 
-a {
-    color: #000000; 
-    text-decoration: none;
-    font-weight: normal; 
-    font-style: normal; 
+.carrousel-incrementable-item button {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    background-color: #ff4081;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
 
-a:hover {
-    color: gray; 
+/* Estilos para la sección de recomendaciones */
+.recommendations {
+    color: beige;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 16px;
+}
+
+.recommendations-container {
+    overflow-x: auto; /* Permitir desplazamiento horizontal */
+    white-space: nowrap;
+    flex-grow: 1; /* Permitir que el contenedor crezca para ocupar el espacio disponible */
+    scroll-behavior: smooth; /* Desplazamiento suave */
+    z-index: 0;
+}
+
+.recommendations-container-item {
+    display: inline-block;
+    position: relative;
+    width: 150px; /* Tamaño pequeño */
+    margin-right: 16px;
+    z-index: 0;
+}
+
+.recommendations-container-item img {
+    width: 150px;
+    height: auto;
+    display: block;
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.501);
+}
+
+.recommendations-container-item .title {
+    position: absolute;
+    bottom: 8px;
+    left: 8px;
+    right: 8px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 4px;
+    font-size: 12px;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    white-space: normal; /* Permitir que el texto abarque más de una línea */
+}
+
+.recommendations-container-item .rating {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 4px;
+    font-size: 12px;
+    text-align: center;
+}
+
+.recommendations-container-item button {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    background-color: #ff4081;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+/* fondo gradiente fondo gradiente fondo gradiente fondo gradiente fondo gradiente fondo gradiente fondo gradiente fondo gradiente fondo gradiente fondo gradiente fondo gradiente fondo gradiente  */
+
+:root {
+    --color-bg1: rgb(81, 41, 41); 
+    --color-bg2: rgb(140, 75, 75); 
+    --color1: 192, 53, 64; 
+    --color2: 255, 163, 170; 
+    --color3: 255, 163, 170;
+    --color4: 192, 53, 64; 
+    --color5: 255, 163, 170;
+    --circle-size: 250%;
+    --blending: hard-light;
+}
+
+.gradient-bg {
+    width: 100vw;
+    /* height: 100vh; */
+    /* position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0; */
+    overflow: hidden;
+    background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.svgBlur {
+    display: none;
+}
+
+.noiseBg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    mix-blend-mode: soft-light;
+    opacity: 0.3;
+}
+
+.gradients-container {
+    filter: url(#goo) blur(40px);
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.g1, .g2, .g3, .g4, .g5 {
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: var(--circle-size);
+    height: var(--circle-size);
+    top: calc(50% - var(--circle-size) / 2);
+    left: calc(50% - var(--circle-size) / 2);
+    transform-origin: center center;
+    opacity: 1;
+    animation: moveRandom 60s linear infinite; /* Ajustar duración */
+}
+
+.g1 {
+    background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
+    animation-duration: 45s; /* Ajustar duración */
+}
+
+.g2 {
+    background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, rgba(var(--color2), 0) 50%) no-repeat;
+    animation-duration: 50s; /* Ajustar duración */
+}
+
+.g3 {
+    background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, rgba(var(--color3), 0) 50%) no-repeat;
+    animation-duration: 55s; /* Ajustar duración */
+}
+
+.g4 {
+    background: radial-gradient(circle at center, rgba(var(--color4), 0.8) 0, rgba(var(--color4), 0) 50%) no-repeat;
+    animation-duration: 60s; /* Ajustar duración */
+}
+
+.g5 {
+    background: radial-gradient(circle at center, rgba(var(--color5), 0.8) 0, rgba(var(--color5), 0) 50%) no-repeat;
+    animation-duration: 65s; /* Ajustar duración */
+}
+
+@keyframes moveRandom {
+    0% {
+        transform: translate(0, 0) rotate(0deg);
+    }
+    20% {
+        transform: translate(80vw, -80vh) rotate(120deg);
+    }
+    40% {
+        transform: translate(-80vw, 80vh) rotate(240deg);
+    }
+    60% {
+        transform: translate(80vw, 80vh) rotate(360deg);
+    }
+    80% {
+        transform: translate(-80vw, -80vh) rotate(480deg);
+    }
+    100% {
+        transform: translate(80vw, -80vh) rotate(600deg);
+    }
 }
