--- a/www/css/login.css
+++ b/www/css/login.css
@@ -33,7 +33,7 @@ body {
 }
 
 a {
-    color: #e9ac2f; 
+    color: #fb737e; 
     text-decoration: none;
     font-weight: normal; 
     font-style: normal; 
@@ -44,22 +44,33 @@ a:hover {
 }
 
 button {
-    background-color: #E9AC2F;
-    color: black;
-    border-radius: 5%;
-    height: 30px;
-    width: 140px;
+    --start-color: #C03540;
+    --end-color: #FFA3AA;
+    position: relative;
+    appearance: none;
+    padding: 1em 2em;
+    color: white;
+    cursor: pointer;
+    outline: none;
+    border-radius: 100px;
+    border: 2px solid transparent;
+    background: linear-gradient(#000, #000) padding-box, linear-gradient(45deg, var(--start-color), var(--end-color)) border-box;
+    transition: background-position 0.3s;
     
 }
 
 header {
-    background-color: #E9AC2F;
+    background-color: #000000;
     height: 100px;
     font-family: 'Base Neue Trial';
-    border-bottom-right-radius:  20px;
-    border-bottom-left-radius: 20px;
     position: relative;
     z-index: 1;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+}
+
+label {
+    color: #fff;
+    margin-right: 10px;
 }
 
 .header-div-contenedor {
@@ -103,7 +114,9 @@ section {
     max-height: 990px;
     margin: auto;
     height: 500px;
-    background-color: #000000;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .register-contenedor {
@@ -119,6 +132,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 3%;
     /* diseño texto */
     color: white;
     font-family: "Bebas",  sans-serif;
@@ -128,7 +142,8 @@ section {
 }
 
 .register-contenedor-item2{
-    background-color: #0f0f0f;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 20px;
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto auto auto auto;
@@ -139,6 +154,7 @@ section {
 
 .register-contenedor-item2-contenedor-item1, .register-contenedor-item2-contenedor-item2, .register-contenedor-item2-contenedor-item3, .register-contenedor-item2-contenedor-item4 {
     display: flex;
+    margin-top: 5%;
     margin-left: 5%;
     margin-right: 5%;
 
@@ -153,12 +169,12 @@ section {
     align-items: flex-start; 
     justify-content: flex-start; 
 } .input-mail {
+    background-color: transparent;
     background: none;
     border: none;
     border-bottom: 1px solid #fff;
     outline: none;
     width: 100%;
-    background-color: #0f0f0f;
 }
 
 
@@ -173,18 +189,18 @@ section {
     height: 70px;
     
 }  .input-password {
+    background-color: transparent;
     background: none;
     border: none;
     border-bottom: 1px solid #fff;
     outline: none;
     width: 100%;
-    background-color: #0f0f0f;
 }
 
 .crear-cuenta-button {
-    margin: 0% 5% 0% 5%;
+    margin: 0% 5% 5% 5%;
     width: 90%;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 .label-link {
@@ -193,3 +209,110 @@ section {
     color: #fff;
 }
 
+
+:root {
+    --color-bg1: rgb(81, 41, 41); 
+    --color-bg2: rgb(140, 75, 75); 
+    --color1: 192, 53, 64; 
+    --color2: 255, 163, 170; 
+    --color3: 255, 163, 170;
+    --color4: 192, 53, 64; 
+    --color5: 255, 163, 170;
+    --circle-size: 250%;
+    --blending: hard-light;
+}
+
+.gradient-bg {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.svgBlur {
+    display: none;
+}
+
+.noiseBg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    mix-blend-mode: soft-light;
+    opacity: 0.3;
+}
+
+.gradients-container {
+    filter: url(#goo) blur(40px);
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.g1, .g2, .g3, .g4, .g5 {
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: var(--circle-size);
+    height: var(--circle-size);
+    top: calc(50% - var(--circle-size) / 2);
+    left: calc(50% - var(--circle-size) / 2);
+    transform-origin: center center;
+    opacity: 1;
+    animation: moveRandom 60s linear infinite; /* Ajustar duración */
+}
+
+.g1 {
+    background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
+    animation-duration: 45s; /* Ajustar duración */
+}
+
+.g2 {
+    background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, rgba(var(--color2), 0) 50%) no-repeat;
+    animation-duration: 50s; /* Ajustar duración */
+}
+
+.g3 {
+    background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, rgba(var(--color3), 0) 50%) no-repeat;
+    animation-duration: 55s; /* Ajustar duración */
+}
+
+.g4 {
+    background: radial-gradient(circle at center, rgba(var(--color4), 0.8) 0, rgba(var(--color4), 0) 50%) no-repeat;
+    animation-duration: 60s; /* Ajustar duración */
+}
+
+.g5 {
+    background: radial-gradient(circle at center, rgba(var(--color5), 0.8) 0, rgba(var(--color5), 0) 50%) no-repeat;
+    animation-duration: 65s; /* Ajustar duración */
+}
+
+@keyframes moveRandom {
+    0% {
+        transform: translate(0, 0) rotate(0deg);
+    }
+    20% {
+        transform: translate(80vw, -80vh) rotate(120deg);
+    }
+    40% {
+        transform: translate(-80vw, 80vh) rotate(240deg);
+    }
+    60% {
+        transform: translate(80vw, 80vh) rotate(360deg);
+    }
+    80% {
+        transform: translate(-80vw, -80vh) rotate(480deg);
+    }
+    100% {
+        transform: translate(80vw, -80vh) rotate(600deg);
+    }
+}
